<resources>
    <string name="app_name">Hawkeye</string>
    <string name="guide_btn">立即体验</string>
    <string name="title_activity_login">登录</string>

    <string name="login_title">登录</string>
    <string name="register_title">注册</string>
    <string name="setting_title">设置</string>

    <!-- Strings related to login -->
    <string name="user_name">邮箱/手机</string>
    <string name="password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_register">注册</string>
    <string name="action_forgot">忘记密码</string>

    <string name="action_sign_in_short">登录</string>

    <string name="error_invalid_account">手机/邮箱无效</string>
    <string name="error_invalid_password">您输入的密码过短</string>
    <string name="error_incorrect_password">密码有误</string>
    <string name="error_account_required">账号不能为空</string>
    <string name="error_password_notempty">请输入密码</string>

    <string name="title_activity_guide">GuideActivity</string>
    <string name="error_invalid_email">邮箱有误</string>
    <string name="error_field_required">该值不能为空</string>
    <string name="success_login">登录成功</string>
    <string name="failed_login">账号密码有误</string>

    <string name="register_phone">请输入您的手机</string>
    <string name="get_valid_code">获取验证码</string>
    <string name="enter_code">请输入验证码</string>
    <string name="set_password">设置您的密码</string>
    <string name="set_nickname">设置您的昵称</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>

    <!--主页下方标题栏-->
    <string name="feathered">精选</string>
    <string name="find">发现</string>
    <string name="favorites">收藏</string>
    <string name="mine">我的</string>

    <!--select photo popupwindow-->
    <string name="take_photo">拍照</string>
    <string name="select_photo">从相册中选取</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
