<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    tools:context="com.lynch.hawkeye.activity.RegisterActivity">
    <include layout="@layout/layout_register_header"/>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:visibility="invisible"
            />
    </LinearLayout>

    <LinearLayout
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:textColor="#7f8c70"
            android:textColorHint="#7f8c70"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <EditText
                android:numeric="integer"
                android:id="@+id/ed_reg_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/register_phone"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textSize="@dimen/little_16" />

            <Button
                android:id="@+id/btn_getcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/get_valid_code"
                android:textSize="@dimen/little_14" />
        </LinearLayout>

        <ImageView
            android:background="#a6a7a7"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical"
            android:padding="10dp" >

            <EditText
                android:numeric="integer"
                android:id="@+id/ed_reg_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/enter_code"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:textSize="@dimen/little_16" />


        </LinearLayout>

        <ImageView
            android:background="#a6a7a7"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal"
            android:padding="10dp" >

            <EditText
                android:id="@+id/ed_reg_pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/set_password"
                android:inputType="textPassword"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:textSize="@dimen/little_16" />

        </LinearLayout>

        <ImageView
            android:background="#a6a7a7"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal"
            android:padding="10dp" >


            <EditText
                android:id="@+id/ed_reg_nick"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/set_nickname"
                android:inputType="text"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:textSize="@dimen/little_16" />
        </LinearLayout>

        <ImageView
            android:background="#a6a7a7"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />

        <Button
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/ok"
            android:textSize="@dimen/little_16" />
    </LinearLayout>
</RelativeLayout>
